Cambios nuevos, tiene algunas fallas el modulo asistencia

--- a/NotaAsistencia.Client/wwwroot/index.html
+++ b/NotaAsistencia.Client/wwwroot/index.html
@@ -29,6 +29,27 @@
         <a class="dismiss">🗙</a>
     </div>
     <script src="_framework/blazor.webassembly.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+
+    <script>
+        window.mostrarModal = function (id) {
+            const modalElement = document.getElementById(id);
+            if (modalElement) {
+                const modal = new bootstrap.Modal(modalElement);
+                modal.show();
+            }
+        };
+
+        window.cerrarModal = function (id) {
+            const modalElement = document.getElementById(id);
+            const modal = bootstrap.Modal.getInstance(modalElement);
+            if (modal) {
+                modal.hide();
+            }
+        };
+    </script>
+
+
 </body>
 
 </html>
